@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-83
-Date: 2011-03-25
+Date: 2011-03-26
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
