@@ -1216,8 +1216,8 @@ oce.debug <- function(debug=0, ...)
 {
     debug <- if (debug > 4) 4 else max(0, floor(debug + 0.5))
     if (debug > 0) {
-        ##cat(paste(rep("  ", 5 - debug), collapse=""), ...)
-        cat(paste(rep("  ", debug), collapse=""), ...)
+        cat(paste(rep("  ", 5 - debug), collapse=""), ...)
+        ##cat(paste(rep("  ", debug), collapse=""), ...)
     }
     flush.console()
 }
